--- a/zabbix-web/zabbix_agentd.conf
+++ b/zabbix-web/zabbix_agentd.conf
@@ -3,4 +3,4 @@ PidFile=/var/run/zabbix/zabbix_agentd.pid
 LogFile=/var/log/zabbix/zabbix_agentd.log
 Server=zabbix-server
 ServerActive=zabbix-server:10051
-Hostname=zabbix-server
+Hostname=zabbix-web
