--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: ${MYSQL_CONTAINER_NAME}
     ports:
       - "3306:3306"
+      - "10050:10052"
     volumes:
       - ${MYSQL_DATA_PATH}:/var/lib/mysql
     environment:
@@ -42,13 +43,16 @@ services:
         ipv4_address: 10.10.112.3
     
   zabbix-web:
-    image: dcoinfdev/zabbix-web:v1.0.0
+    image: dcoinfdev/zabbix-web-grafana:v1.0.1
     restart: always
     container_name: ${ZABBIX_WEB_CONTAINER_NAME}
     ports:
       - "8080:8080"
+      - "3000:3000"
+      - "10050:10053"
     volumes:
       - ${ZABBIX_WEB_DATA_PATH}:/usr/share/zabbix
+      - ${GRAFANA_DATA_PATH}:/var/lib/grafana
     environment:
       DB_SERVER_HOST: ${DB_SERVER_HOST}
       DB_SERVER_PORT: ${DB_SERVER_PORT}
@@ -59,27 +63,14 @@ services:
       ZBX_SERVER_HOST: ${ZBX_SERVER_HOST}
       ZBX_SERVER_PORT: ${ZBX_SERVER_PORT}
       PHP_TZ: ${PHP_TZ}
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
     depends_on:
       - mysql
       - zabbix-server
     networks:
       zabbix-network:
         ipv4_address: 10.10.112.4
-    
-  grafana:
-    image: grafana/grafana:latest
-    restart: always
-    container_name: ${GRAFANA_CONTAINER_NAME}
-    ports:
-      - "3000:3000"
-    volumes:
-      - ${GRAFANA_DATA_PATH}:/var/lib/grafana
-    environment:
-      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
-      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
-    networks:
-      zabbix-network:
-        ipv4_address: 10.10.112.5
   
 volumes:
   mysql_data:
