inclusao do servidor de notificaco do zabbix em python.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: '3.8'
 
 services:
   mysql:
-    image: dcoinfdev/mysql-server:v1.0.0
+    image: dcoinfdev/mysql-server:v1.0.1
     restart: always
     container_name: ${MYSQL_CONTAINER_NAME}
     ports:
       - "3306:3306"
-      - "10050:10052"
     volumes:
       - ${MYSQL_DATA_PATH}:/var/lib/mysql
     environment:
@@ -20,7 +19,7 @@ services:
         ipv4_address: 10.10.112.2  
 
   zabbix-server:
-    image: dcoinfdev/zabbix-server:v1.0.0
+    image: dcoinfdev/zabbix-server:v1.0.2
     restart: always
     container_name: ${ZABBIX_SERVER_CONTAINER_NAME}
     ports:
@@ -49,10 +48,9 @@ services:
     ports:
       - "8080:8080"
       - "3000:3000"
-      - "10050:10053"
     volumes:
       - ${ZABBIX_WEB_DATA_PATH}:/usr/share/zabbix
-      - ${GRAFANA_DATA_PATH}:/var/lib/grafana
+      - ${ZABBIX_WEB_GRAFANA_DATA_PATH}:/var/lib/grafana
     environment:
       DB_SERVER_HOST: ${DB_SERVER_HOST}
       DB_SERVER_PORT: ${DB_SERVER_PORT}
@@ -71,14 +69,29 @@ services:
     networks:
       zabbix-network:
         ipv4_address: 10.10.112.4
-  
+
+  notifier:
+    image: dcoinfdev/zabbix-notifier:v1.0
+    restart: always
+    container_name: ${NOTIFIER_CONTAINER_NAME}
+    volumes:
+      - ${ZABBIX_NOTIFIER_DATA_SCRIPTS}:/scripts
+      - ${ZABBIX_NOTIFIER_DATA_CONFIG}:/config
+    depends_on:
+      - mysql
+      - zabbix-server
+      - zabbix-web
+    networks:
+      zabbix-network:
+        ipv4_address: 10.10.112.5
+
 volumes:
   mysql_data:
   zabbix_server_data:
   zabbix_web_data:
-  grafana_data:
-  openvpn-data:
-  backups:
+  zabbix_web_grafana_data_path:
+  zabbix_notifier_scripts:
+  zabbix_notifier_config:
 
 networks:
   zabbix-network:
