--- a/mysql/zabbix_agentd.conf
+++ b/mysql/zabbix_agentd.conf
@@ -1,6 +1,7 @@
 # Exemplo de configuração do Zabbix Agent
 PidFile=/var/run/zabbix/zabbix_agentd.pid
 LogFile=/var/log/zabbix/zabbix_agentd.log
+ListenPort=10052
 Server=zabbix-server
 ServerActive=zabbix-server:10051
 Hostname=mysql
